# ollama_pdf_rag

./: 404.html  index.html  pyproject.toml  requirements.txt
api/document/: index.html
api/embeddings/: index.html
api/llm/: index.html
api/rag/: index.html
development/changelog/: index.html
development/contributing/: index.html
development/testing/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
src/app/: main.py
test-files/: NanoHawk Pro NHKP.md  README_1.md  prompts.txt  test-md-2.md
user-guide/chat-interface/: index.html
user-guide/pdf-processing/: index.html
user-guide/rag-pipeline/: index.html
