[tool.poetry]
name = "ollama-pdf-rag"
version = "0.1.0"
description = ""
authors = ["<michael.koehler@edag.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.8"
streamlit = "^1.45.0"
chromadb = "^1.0.8"
pdfplumber = "^0.11.6"
langchain = "^0.3.25"
langchain-core = "^0.3.58"
langchain-ollama = "^0.3.2"
langchain-community = "^0.3.23"
langchain-text-splitters = "^0.3.8"
unstructured = {extras = ["all-docs"], version = "^0.17.2"}
onnx = "^1.17.0"
protobuf = "^5.29.2"
pillow = "^11.2.1"
numpy = "^2.2.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
pydantic = "^2.11.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
